pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/manifest/requires.ub
manifest: {
  requires: {
    'example.com/lib': 'v1.0.0'
    'example.com/lib': 'v1.1.0'
  }
}
